feat: [BE] 규칙 기반 FDS 처리 구현 (#7)
